# MicroGrad

./: .gitignore  CMakeLists.txt  Micrograd.docx  PUBLISHING.md  README.md  pyproject.toml
.claude/: settings.local.json
.github/workflows/: publish.yml
docs/: architecture.md  stability_and_fixes.md
examples/: 01_adder.py  02_mlp_xor.py  03_toy_regression.py  05_custom_op.py  06_jit_speedup.py  08_save_load.py
include/micrograd/: active_fn.hpp  adam.hpp  autograd.hpp  device.hpp  dtype.hpp  function.hpp  ir.hpp  ir_fwd.hpp  linear.hpp  loss.hpp  micrograd.hpp  module.hpp  momentum.hpp  op.hpp  op_registry.hpp  optimizer.hpp  relu.hpp  sequential.hpp  serializer.hpp  sgd.hpp  shape.hpp  softmax.hpp  storage.hpp  stream.hpp  tensor.hpp
python/micrograd/: __init__.py  function.py  losses.py  tensor.py
python/micrograd/data/: __init__.py  toy_datasets.py
python/micrograd/nn/: __init__.py  conv.py  linear.py  module.py  relu.py  sequential.py  softmax.py
python/micrograd/op_def/: __init__.py
python/micrograd/optim/: __init__.py  adam.py  momentum.py  sgd.py
python/micrograd/train/: __init__.py  loop.py
python/micrograd/transforms/: __init__.py  grad.py  jit.py  vmap.py
src/: CMakeLists.txt
src/core/: active_fn.cpp  adam.cpp  autograd.cpp  function.cpp  ir.cpp  linear.cpp  loss.cpp  module.cpp  momentum.cpp  op.cpp  op_kernels.cpp  op_registry.cpp  optimizer.cpp  relu.cpp  sequential.cpp  serializer.cpp  sgd.cpp  softmax.cpp  storage.cpp  stream.cpp  tensor.cpp
src/kernels/cpu/: binary_kernels.cpp  binary_kernels.hpp  matmul_kernels.cpp  matmul_kernels.hpp  reduce_kernels.cpp  reduce_kernels.hpp  unary_kernels.cpp  unary_kernels.hpp
src/python/: module.cpp  py_function.cpp  py_loss.cpp  py_module.cpp  py_op_registry.cpp  py_optim.cpp  py_serializer.cpp  py_tensor.cpp  py_transforms.cpp
tests/e2e/: test_toy_regression.py  test_xor.py
tests/python/: test_autograd_gradcheck.py  test_conv2d.py  test_module.py  test_op_def.py  test_serializer.py  test_transforms.py
