[build-system]
requires = ["scikit-build-core>=0.5", "pybind11>=2.10", "cmake>=3.20"]
build-backend = "scikit_build_core.build"

[project]
name = "micrograd"
version = "0.1.0"
description = "A small autograd library with a C++ core and pybind11 Python bindings."
requires-python = ">=3.9"
dependencies = ["numpy>=1.20"]

[tool.scikit-build]
wheel.packages = ["python/micrograd"]
build-dir = "build/{wheel_tag}"
cmake.minimum-version = "3.20"

[tool.scikit-build.cmake.define]
MICROGRAD_BUILD_PYTHON = "ON"
